# job-api-aggregator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  credentials_format.md  output_schema.md  plugin_authoring.md
docs/superpowers/plans/: 2026-04-23-job-aggregator-v1-execution-plan.md
docs/superpowers/specs/: 2026-04-23-job-aggregator-design.md
scripts/: preflight_smoke.py
src/job_aggregator/: orchestrator.py
src/job_api_aggregator/: __init__.py  auto_register.py  base.py  envelope.py  errors.py  hydrator.py  normalizer.py  orchestrator.py  registry.py  schema.py  scraping.py
src/job_api_aggregator/cli/: __main__.py  hydrate.py  jobs.py  sources.py
src/job_api_aggregator/output/: __init__.py  json.py  jsonl.py
src/job_api_aggregator/plugins/: __init__.py
src/job_api_aggregator/plugins/adzuna/: __init__.py
src/job_api_aggregator/plugins/arbeitnow/: __init__.py  plugin.py
src/job_api_aggregator/plugins/himalayas/: __init__.py  plugin.py
src/job_api_aggregator/plugins/jobicy/: __init__.py  plugin.py
src/job_api_aggregator/plugins/jooble/: __init__.py  plugin.py
src/job_api_aggregator/plugins/jsearch/: __init__.py
src/job_api_aggregator/plugins/remoteok/: __init__.py
src/job_api_aggregator/plugins/remotive/: __init__.py  plugin.py
src/job_api_aggregator/plugins/the_muse/: __init__.py  plugin.py
src/job_api_aggregator/plugins/usajobs/: __init__.py  plugin.py
tests/: test_auto_register.py  test_base_abc.py  test_cli_jobs.py  test_cli_sources.py  test_envelope.py  test_errors.py  test_hours_filter.py  test_hydrator.py  test_normalizer.py  test_orchestrator.py  test_plugin_contract.py  test_registry.py  test_schema.py  test_scraping.py  test_smoke.py
tests/cli/: test_hydrate_cli.py  test_jobs_cli.py
tests/fixtures/plugins/: stub_plugins.py
tests/sources/adzuna/: test_adzuna.py  test_adzuna_integration.py
tests/sources/arbeitnow/: test_arbeitnow.py  test_arbeitnow_integration.py
tests/sources/himalayas/: test_himalayas.py  test_himalayas_integration.py
tests/sources/jobicy/: test_jobicy.py  test_jobicy_integration.py
tests/sources/jooble/: test_jooble.py  test_jooble_integration.py
tests/sources/jsearch/: test_jsearch.py  test_jsearch_integration.py
tests/sources/remoteok/: test_remoteok.py  test_remoteok_integration.py
tests/sources/remotive/: test_remotive.py  test_remotive_integration.py
tests/sources/the_muse/: test_the_muse.py  test_the_muse_integration.py
tests/sources/usajobs/: test_usajobs.py  test_usajobs_integration.py
